--- a/usuario/src/main/resources/application.properties
+++ b/usuario/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url = jdbc:mysql://localhost:3306/tickets?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+spring.security.user.name=user
+spring.security.user.password=$2a$10$/rGDZMh8C.bgBXoJd9b7vOWJ5Wu7ZNAxC6L7WECWxiPqW0z5O7ZNe
